--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>  Hello world. This is my first website!</h1>
   
 
-   <p>My name is Mbargou Gueye. I am in my first semester at IIT. I currently manage my family restaurant called Yassa African Restaurant. If ever interested in trying the best African food, the address is 3511 S king drive, Chicago, IL 60653. As for my future school plans, I am just ready to learn and soak in new knowledge. For my career plans, I am currently researching companies that I can apply for an internship to get some experience and understand better which path I will take regarding my major. For my hobbies, I like things such as anime and reading manga. I also am a self-taught photographer, you are welcome to check out my portfolio on Instagram @g_u_eye. </p>
+   <p>My name is Mbargou Gueye. I am in my second semester at IIT. I currently manage my family restaurant called Yassa African Restaurant. If ever interested in trying the best African food, the address is 3511 S king drive, Chicago, IL 60653. As for my future school plans, I am just ready to learn and soak in new knowledge. For my career plans, I am currently a tech support admin at Advocate Aurora. Some of my
+       responsibilities at my job are to configure, install and upgrade computers. For my hobbies, I like things such as anime and reading manga. I also am a self-taught photographer, you are welcome to check out my portfolio on Instagram @g_u_eye. </p>
 </body>
 </html>
